Stable test version with services functionality

--- a/DARemoteViewer.WPF/DARemoteViewer.WPF.csproj
+++ b/DARemoteViewer.WPF/DARemoteViewer.WPF.csproj
@@ -24,12 +24,10 @@
     <Content Include="App.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <PackageReference Include="System.Management" Version="8.0.0" />
+    <PackageReference Include="System.ServiceProcess.ServiceController" Version="8.0.0" />
     <Resource Include="Image\minusicon_25p.png" />
     <Resource Include="Image\plusicon_25p.png" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="NewFolder\" />
   </ItemGroup>
 
 </Project>
