--- a/DARemoteViewer.Domain/DARemoteViewer.Domain.csproj
+++ b/DARemoteViewer.Domain/DARemoteViewer.Domain.csproj
@@ -22,6 +22,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.ServiceProcess.ServiceController" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="DARemoteViewer.Domain">
       <Alias>DADomain</Alias>
     </Using>
